--- a/diary/index.html
+++ b/diary/index.html
@@ -15,9 +15,13 @@
     <meta content="yes">
     <meta content="black">
     <meta content="telephone=no,email=no">
+    <script type="text/javascript">
+
+    </script>
 </head>
 
-<body>
+<body >
   <div id="app"></div>
 </body>
+
 </html>
