--- a/example/index.html
+++ b/example/index.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
+    <meta name="x5-fullscreen" content="true">
     <meta name="x5-page-mode" content="app">
     <meta content="yes">
     <meta content="black">
